@@ -1,1 +1,7 @@
 # ProteinNetworkAnalysis
+
+```shell script
+> cd target/
+> export PATH_TO_FX=path/to/javafx-sdk-13/lib
+> java -jar --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml NetworkAnalysis.jar
+```
